--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ sudo: false
 language: ruby
 rvm:
   - 2.3.3
-before_install: gem install bundler -v 1.16.2
+before_install:
+  - sudo apt-get install imagemagick
+  - gem install bundler -v 1.16.2
+script:
+  - bundle exec rspec
